# HelpChain

./:  SSH key.pub  .env.example  .git_status_after_ruff.txt  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  .pytest_check_try.py  .ruffignore  .secrets.baseline  .vercelignore  ANALYTICS_FIX_BEFORE_AFTER.md  ANALYTICS_FIX_DOCUMENTATION.md  ANALYTICS_FIX_VERIFICATION.md  API_DOCUMENTATION.md  CHANGELOG.md  CODEOWNERS  COPILOT_AUTOMATION_TEST.md  DB_WRITE_OPERATIONS_MANUAL_ONLY.md  DEMO.md  DEV_RULES.md  DatabaseOptimizer.txt  HELPCHAIN_TODO.md  INSTALL.md  NOTIFICATION_SYSTEM.md  POSTGRESQL_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_EMAIL_SETUP.md  README.bg.md  README.fr.md  README.md  RUNBOOK.md  SECURITY.md  SERVER_README.md  TODO.md  VERCEL_DEPLOYMENT.md  VOLUNTEERS_API_DOCUMENTATION.md  _dispatch_email.py  add_indexes_migration.py  (+268 more)
backend/: # Code Citations.md  # 🧩 HelpChain System Architecture Docum.md  .dockerignore  .env.example  .flaskenv  .gitignore  .pre-commit-config.yaml  .repo_compile_check.py  .secrets.baseline  .vercelignore  2FA_README.md  ADMIN_LOGS_README.md  AI_Architecture.md  AI_INTEGRATION_GUIDE.md  AI_Planning.md  ANALYTICS_API_REFERENCE.md  ANALYTICS_COMPLETE_DOCUMENTATION.md  ANALYTICS_DOCUMENTATION.md  ANALYTICS_QUICK_START.md  ANALYTICS_README.md  ANALYTICS_SETUP_GUIDE.md  API_ERROR_SECURITY.md  CHANGELOG.md  CROSS_BROWSER_CHECKLIST.md  CROSS_BROWSER_README.md  DASHBOARD_UX_PLAN.md  DEPLOYMENT.md  DEVELOPMENT_ROADMAP.md  DLQ_README.md  DOCKER_KUBERNETES_README.md  Dockerfile  HELPCHAIN_QUICK_REFERENCE.md  HelpChainAI_API_Test.postman_collection.json  HelpChain_TODO_Auth_DB_Tracing.md  InstallDataExporter.sh  LICENSE  LOAD_TESTING_COMPLETE.md  MIGRATIONS.md  MOBILE_TESTING_CHECKLIST.md  MOBILE_TESTING_README.md  (+286 more)
backend/.github/: COVERAGE_ARTIFACTS.md  copilot-instructions.md
backend/admin/: __init__.py  ops_api.py  risk_api.py
backend/apminsightdata/: apminsight_info.ini
backend/backend/: _dispatch_email.py
backend/backups/: appy.backup_20251012.py.txt
backend/core/: __init__.py  tenant.py
backend/db/: __init__.py  migration_utils.py
backend/dev_scripts/: archive_testdbs.ps1  debug_client.py  ensure_admin_role_column.py  inspect_requests.py  recreate_admin_users_full.py  test_ai.py
backend/docs/: admin-access.md  admin-panel.md
backend/email_templates/: admin_notification.html  feedback_notification.html  new_registration.html  volunteer_welcome.html  welcome_email.html
backend/helpchain-backend/: requirements.txt  sent_emails.txt  test_email.py  test_email_system.py
backend/helpchain_backend/: README.md  __init__.py  requirements.txt  sent_emails.txt  test_app.py  test_email.py  test_email_system.py  test_request.py
backend/instance/: volunteers.db
backend/k8s/: app-deployment.yaml  app-service.yaml  celery-worker.yaml  configmap.yaml  ingress.yaml  namespace.yaml  postgres.yaml  pvc.yaml  redis.yaml  secret.yaml
backend/migrations/: alembic.ini  env.py
backend/models/: __init__.py
backend/nginx/: nginx.conf
backend/routes/: admin.py  auth_2fa.py  lead_capture.py  notifications.py
backend/scripts/: admin_dashboard_response.html  admin_login_get.html  admin_login_response.html  archive_testdbs.ps1  backfill_assignments_from_requests.py  backfill_intervenants_from_volunteers.py  backfill_request_coordinates.py  backfill_request_structure_id.py  backup-local-db.ps1  blue-green-deploy.sh  bootstrap_production_minimal.py  bootstrap_schema.py  check_admin_db.py  check_tables.py  convert_safety_to_sarif.py  create_admin_user.py  db_inspect.py  debug_client.py  dedupe_professional_leads.py  delete_user.py  deprecate_local_passwords.py  dev.ps1  dev_bootstrap.py  dev_reset.py  diagnose_auditlog.py  enrich_professional_leads_contacts.py  ensure_admin.py  ensure_admin_role_column.py  ensure_render_admin.py  find_auditlog_defs.py  fts_rebuild.py  import_professionals_csv.py  (+51 more)
(+1567 files in other folders)
