[project]
name = "helpchain-bg"
version = "0.0.0"
requires-python = ">=3.11,<3.13"

# Minimal runtime dependencies required by the app on the Vercel build/runtime.
# Vercel can prefer installing from pyproject; ensure critical packages are listed.
dependencies = [
	"Jinja2==3.1.6",
	"PyJWT==2.10.1"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["backend*"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
