[project]
name = "helpchain-bg"
version = "0.0.0"
description = "HelpChain BG app"
requires-python = ">=3.11,<3.13"
dependencies = [
	"Flask==2.3.3",
	"Flask-Login==0.6.3",
	"Flask-WTF==1.2.2",
	"Flask-Mail==0.9.1",
	"flask-sqlalchemy==3.0.5",
	"Flask-Migrate==4.0.5",
	"flask-babel==3.1.0",
	"flask-cors==6.0.1",
	"Flask-Limiter==3.5.0",
	"Flask-SocketIO==5.3.6",
	"Flask-Talisman==1.1.0",
	"Flask-Caching==2.3.0",
	"gunicorn==23.0.0",
	"sqlalchemy==2.0.44",
	"psycopg2-binary==2.9.10",
	"python-dotenv==1.0.0",
	"itsdangerous==2.2.0",
	"email-validator==2.3.0",
	"Jinja2==3.1.6",
	"Werkzeug==2.3.7",
	"click==8.1.7",
	"requests==2.31.0",
	"beautifulsoup4==4.12.2"
    ,"PyJWT==2.8.0"
]
[tool.ruff]
exclude = [
	".venv",
	"venv",
	"vendor",
	"backend/vendor",
	"backend/helpchain-backend/vendor",
	"node_modules",
	"migrations",
	"dist",
	"build",
	"__pycache__",
	"_vendor",
]

[tool.black]
# Formatting baseline.
line-length = 88
target-version = ["py311"]

# Keep CI fast and avoid touching vendored / generated trees.
extend-exclude = '''
/(
  \.venv
| venv
| vendor
| node_modules
| migrations
| dist
| build
| __pycache__
| \.git
| \.ruff_cache
| \.pytest_cache
)/
'''
